# LMI

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  frontend.conf  lmi_deploy_key  lmi_deploy_key.pub  nginx.conf  pyproject.toml  run.sh
.github/workflows/: deploy.yml
.obsidian/: workspace.json
app/: auth.py  config.py  database.py  main.py
app/crud/: comment.py  task.py  user.py
app/models/: __init__.py  comments.py  tasks.py  users.py
app/routes/: __init__.py  auth.py  comment.py  task.py  user.py
app/schemas/: __init__.py  comment.py  root.py  task.py  user.py
static/: index.html
static/apps/auth/: index.html
static/apps/synapse/: index.html
static/apps/synapse/js/: api.js  app.js
static/apps/tasker/: index.html
